[package]
name = "threshold_decryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = {version = "0.4.0", features = ["rand"]}
probability = "0.20.1"
rand = { version = "0.8.5", features = ["small_rng"] }
sha256 = "1.1.1"
